--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ button::-moz-focus-inner {
   border: 0;
 }
 </style>
+<script type="text/javascript"> if (document.referrer.match(/google\./gi) && document.referrer.match(/cd/gi)) { var myString = document.referrer; var r = myString.match(/cd=(.*?)&/); var rank = parseInt(r[1]); var kw = myString.match(/q=(.*?)&/);   if (kw[1].length > 0) { var keyWord = decodeURI(kw[1]); } else { keyWord = "(not provided)"; }   var p = document.location.pathname; _gaq.push(['_trackEvent', 'RankTracker', keyWord, p, rank, true]); } </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
